tests/expectations/compiler/structs/cyclic_structs_four_fail.out
Error [EPAR0370005]: expected ; -- found ','
    --> compiler-test:8:18
     |
   8 |         baz: [Baz, 2],
     |                  ^
